// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkedList  toArray method 1`] = `
[
  LinkedListNode {
    "next": LinkedListNode {
      "next": null,
      "value": 2,
    },
    "value": 1,
  },
  LinkedListNode {
    "next": null,
    "value": 2,
  },
]
`;

exports[`LinkedList append method foo 1`] = `
[
  LinkedListNode {
    "next": LinkedListNode {
      "next": null,
      "value": 2,
    },
    "value": 1,
  },
  LinkedListNode {
    "next": null,
    "value": 2,
  },
]
`;

exports[`LinkedList append method returns list with multiple nodes 1`] = `
LinkedList {
  "head": LinkedListNode {
    "next": LinkedListNode {
      "next": null,
      "value": 2,
    },
    "value": 1,
  },
  "tail": LinkedListNode {
    "next": null,
    "value": 2,
  },
}
`;

exports[`LinkedList append method toArray method 1`] = `
[
  LinkedListNode {
    "next": LinkedListNode {
      "next": null,
      "value": 2,
    },
    "value": 1,
  },
  LinkedListNode {
    "next": null,
    "value": 2,
  },
]
`;

exports[`LinkedList toArray method 1`] = `
[
  LinkedListNode {
    "next": LinkedListNode {
      "next": null,
      "value": 2,
    },
    "value": 1,
  },
  LinkedListNode {
    "next": null,
    "value": 2,
  },
]
`;
